# yolo-deploy

./: .gitignore  CMakeLists.txt  readme.md
doc/: FAQ.md  log_doc.md  parase_doc.md
element/Det/: CMakeLists.txt
element/Det/include/: detect.h  detect_factory.h  sophgo_detect.h  trt_detect.h
element/Det/src/: detect.cpp  detect_factory.cpp  sophgo_detect.cpp  trt_detect.cpp
element/Pose/: CMakeLists.txt
element/Pose/include/: pose.h  pose_factory.h  sophgo_pose.h  trt_pose.h
element/Pose/src/: pose.cpp  pose_factory.cpp  sophgo_pose.cpp  trt_pose.cpp
element/Seg/: CMakeLists.txt
element/Seg/include/: segment.h  segment_factory.h  sophgo_segment.h  trt_segment.h
element/Seg/src/: segment.cpp  segment_factory.cpp  sophgo_segment.cpp  trt_segment.cpp
framework/: CMakeLists.txt
framework/include/: fps_counter.h  log.h  log.hpp  safe_queue.hpp  threadpool.hpp  yolo_common.h
framework/sophgo_framework/include/: bmnn_utils.h  ff_decode.h
framework/sophgo_framework/src/: ff_decode.cpp
framework/src/: fps_counter.cpp  log.cpp
framework/utils/include/: utils.h
framework/utils/src/: utils.cpp
sample/Det/: CMakeLists.txt  detect.cpp
sample/Det/nvidia/: CMakeLists.txt  detect.cpp
sample/Det/nvidia_pcie/: CMakeLists.txt
sample/Det/sophgo/: CMakeLists.txt  detect.cpp
sample/Det/sophgp_pcie/: CMakeLists.txt
sample/Det/tensorrt/: CMakeLists.txt  detect.cpp
sample/Pose/sophgo/: CMakeLists.txt  pose.cpp
sample/Pose/tensorrt/: CMakeLists.txt  pose.cpp
sample/Seg/sophgo/: CMakeLists.txt  segment.cpp
sample/Seg/tensorrt/: CMakeLists.txt  segment.cpp
sample/sophgo/: CMakeLists.txt  sophgo_yolo.cpp
test/: CMakeLists.txt  test_check.cpp  test_log.cpp  test_threadpool.cpp
tool/: add_transpose.py  sophgo_transform.txt  tensorrt_transform.txt
